--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { "name" : "multicast-eventemitter"
 , "description" : "LAN wide eventemitter, using multicast."
-, "version" : "0.2.0"
+, "version" : "0.2.1"
 , "maintainers" :
   [ { "name": "Chris Dew"
     , "email": "cmsdew@gmail.com"
@@ -14,7 +14,9 @@
     }
   ]
 , "main" : "./lib/multicast-eventemitter.js"
-, "engines" : { "node" : ">=0.4.7" }
+  "engines": {
+    "node": "~0.4.0"
+  },
 , "dependencies" : { "vows" : ">=0.5.2"
                    , "docco" : ">=0.3.0"
                    }
