--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     }
   ]
 , "main" : "./lib/multicast-eventemitter.js"
-  "engines": {
-    "node": "~0.4.0"
+, "engines" : {
+    "node" : "~0.4.0"
   },
 , "dependencies" : { "vows" : ">=0.5.2"
                    , "docco" : ">=0.3.0"
